// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-movable-ink's productViewed destination action: all fields 1`] = `
Object {
  "anonymous_id": ")X*ZnUpNWN@S4t]]",
  "categories": Array [
    Object {
      "id": ")X*ZnUpNWN@S4t]]",
      "url": ")X*ZnUpNWN@S4t]]",
    },
  ],
  "event_name": "Product Viewed",
  "metadata": Object {
    "testType": ")X*ZnUpNWN@S4t]]",
  },
  "product": Object {
    "id": ")X*ZnUpNWN@S4t]]",
    "price": 38988624020111.36,
    "title": ")X*ZnUpNWN@S4t]]",
    "url": ")X*ZnUpNWN@S4t]]",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "timezone": ")X*ZnUpNWN@S4t]]",
  "user_id": ")X*ZnUpNWN@S4t]]",
}
`;

exports[`Testing snapshot for actions-movable-ink's productViewed destination action: required fields 1`] = `
Object {
  "anonymous_id": ")X*ZnUpNWN@S4t]]",
  "event_name": "Product Viewed",
  "metadata": Object {},
  "product": Object {
    "id": ")X*ZnUpNWN@S4t]]",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": ")X*ZnUpNWN@S4t]]",
}
`;
